Margin fix
Fixed bug where an extra margin was being displayed on mobile devices
for the demo cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ p {
 }
 
 .demo-wrapper {
-    width: 68%;
+    width: 65%;
     margin: 0 auto;
 }
 
@@ -491,7 +491,7 @@ p {
     }
 
     .demo-wrapper {
-        width: 82%;
+        width: 78%;
     }
 }
 
